# Inclusive-AI

./: .gitignore  Dockerfile  LICENSE  README.md  manage.py  requirements.txt
Inclusive AI main/inclusive_ai/: .env
Inclusive AI main/inclusive_ai/main/: views.py
Inclusive AI main/inclusive_ai/settings/: urls.py  wsgi.py
Inclusive AI main/inclusive_ai/templates/: base.html
inclusive_ai/: Makefile  env.example  pyproject.toml
inclusive_ai/apps/pages/: forms.py  urls.py  views.py
inclusive_ai/apps/pages/templates/pages/: homepage.html  test-question.html
inclusive_ai/apps/pears/: apps.py  urls.py  views.py
inclusive_ai/apps/pears/templates/pears/: pears.html
inclusive_ai/apps/pears/templatetags/: j_extras.py
inclusive_ai/main/: urls.py
inclusive_ai/settings/: asgi.py  settings.py  urls.py
inclusive_ai/settings/components/authentication/: account.py
inclusive_ai/settings/components/communication/: email.py
inclusive_ai/settings/components/database/: postgresql.py  sqlite.py
inclusive_ai/settings/components/internationalization/: base.py
inclusive_ai/settings/components/performance/: caches.py  compression.py
inclusive_ai/settings/components/security/: base.py  content_security.py  cors.py  csrf.py  orm_security.py  session.py  throttling.py
inclusive_ai/static/css/: initiatives.css  main.css
inclusive_ai/templates/account/: login.html  logout.html  signup.html
inclusive_ai/templates/includes/: header.html
inclusive_ai/templates/main/: initiatives.html
inclusive_ai/templates/users/: login.html  register.html
(+8 files in other folders)
