[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "django>=5.2",
    "django-allauth>=65.7.0",
    "django-environ>=0.12.0",
    "django-split-settings>=1.3.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sorl-thumbnail>=12.11.0",
]


[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "F",      # pyflakes
    "UP",     # pyupgrade
]
